# twili

./: .appveyor.yml  .dir-locals.el  .gitignore  .gitmodules  .travis.yml  BridgeObject.cpp  BridgeObject.hpp  ELFCrashReport.cpp  ELFCrashReport.hpp  Elf.hpp  IFile.cpp  IFile.hpp  IHBABIShim.cpp  IHBABIShim.hpp  IPipe.cpp  IPipe.hpp  ITwibDebugger.cpp  ITwibDebugger.hpp  ITwibDeviceInterface.cpp  ITwibDeviceInterface.hpp  ITwibPipeReader.cpp  ITwibPipeReader.hpp  ITwibPipeWriter.cpp  ITwibPipeWriter.hpp  ITwiliService.cpp  ITwiliService.hpp  LICENSE  Makefile  MonitoredProcess.cpp  MonitoredProcess.hpp  MutexShim.cpp  Process.cpp  Process.hpp  README.md  Socket.cpp  Socket.hpp  TwibPipe.cpp  TwibPipe.hpp  USBBridge.cpp  USBBridge.hpp  (+17 more)
.travis/: twib.sh  twib_before_deploy.sh  twili_before_deploy.sh  twili_install.sh
bridge/: Object.cpp  ResponseOpener.cpp  ResponseOpener.hpp  ResponseWriter.cpp
common/: Buffer.cpp  Buffer.hpp  Protocol.hpp  err.hpp  err_defs.cpp  err_defs.hpp  title_id.hpp  util.cpp  util.hpp
docs/: twili.id
hbabi_shim/: hbabi_shim.cpp
libpsf/: API  LICENSE  Makefile  README.md  amd64_syscalls.s  ex.c  font.psf  libpsf.c  mem.s  mk.sh  psf.h
libtmt/: README.rst  tmt.c  tmt.h
shell_shim/: shell_shim.cpp  shell_shim.json
twib/: .dir-locals.el  Buffer.cpp  Buffer.hpp  CMakeLists.txt  Cargo.toml  EventThreadNotifier.hpp  Logger.cpp  Logger.hpp  MessageConnection.cpp  MessageConnection.hpp  NamedPipeMessageConnection.cpp  NamedPipeMessageConnection.hpp  NamedPipeServer.cpp  NamedPipeServer.hpp  Networking.hpp  Protocol.hpp  Result.hpp  ResultError.cpp  ResultError.hpp  SocketMessageConnection.cpp  SocketMessageConnection.hpp  SocketServer.cpp  SocketServer.hpp  ansi-colors.h  config.hpp.in  platform.hpp
twib/cmake/: Findlibusb-1.0.cmake  Findlibusbk.cmake  Findsetupapi.cmake  Findsystemd.cmake
twib/common/: CMakeLists.txt  Logger.cpp  Logger.hpp  MessageConnection.cpp  MessageConnection.hpp  NamedPipeMessageConnection.cpp  NamedPipeMessageConnection.hpp  ResultError.cpp  ResultError.hpp  Semaphore.cpp  Semaphore.hpp  SocketMessageConnection.cpp  SocketMessageConnection.hpp  ansi-colors.h  blockingconcurrentqueue.h  config.hpp.in
twib/daemon/: BridgeObject.cpp  BridgeObject.hpp  CMakeLists.txt  Daemon.cpp  Daemon.hpp  Device.hpp  Frontend.hpp  InitialScanLock.cpp  InitialScanLock.hpp  LocalClient.cpp  LocalClient.hpp  Messages.cpp  NamedPipeFrontend.cpp  NamedPipeFrontend.hpp  SocketFrontend.cpp  SocketFrontend.hpp  TCPBackend.cpp  TCPBackend.hpp  USBBackend.cpp  USBBackend.hpp  USBKBackend.cpp  USBKBackend.hpp  com.misson20000.twibd.plist  twibd.service  twibd.socket
twib/platform/: CMakeLists.txt  EventLoop.hpp  unix.hpp  windows.cpp  windows.hpp
twib/platform/common/: EventLoop.hpp  fs.hpp
twib/platform/unix/: EventLoop.cpp  EventLoop.hpp
twib/platform/unix/platform/: EventLoop.cpp  EventLoop.hpp  InputPump.cpp  InputPump.hpp  fs.cpp  platform.cpp  platform.hpp
twib/platform/windows/: EventLoop.cpp  EventLoop.hpp
twib/platform/windows/platform/: EventLoop.cpp  EventLoop.hpp  InputPump.cpp  InputPump.hpp  fs.cpp  platform.cpp  platform.hpp
twib/src/: error.rs  main.rs  usb.rs
twib/tool/: CMakeLists.txt  Client.cpp  Client.hpp  DebugTypes.hpp  GdbConnection.cpp  GdbConnection.hpp  GdbStub.cpp  GdbStub.hpp  Messages.cpp  Messages.hpp  NamedPipeClient.cpp  NamedPipeClient.hpp  Packing.hpp  RemoteObject.cpp  RemoteObject.hpp  SocketClient.cpp  SocketClient.hpp  Twib.cpp
twib/tool/interfaces/: ITwibDebugger.cpp  ITwibDebugger.hpp  ITwibDeviceInterface.cpp  ITwibDeviceInterface.hpp  ITwibDirectoryAccessor.cpp  ITwibDirectoryAccessor.hpp  ITwibFileAccessor.cpp  ITwibFileAccessor.hpp  ITwibFilesystemAccessor.cpp  ITwibFilesystemAccessor.hpp  ITwibMetaInterface.cpp  ITwibMetaInterface.hpp  ITwibPipeReader.cpp  ITwibPipeReader.hpp  ITwibPipeWriter.cpp  ITwibPipeWriter.hpp  ITwibProcessMonitor.cpp  ITwibProcessMonitor.hpp
twib/twib/: CMakeLists.txt  Client.cpp  Client.hpp  DebugTypes.hpp  GdbConnection.cpp  GdbConnection.hpp  GdbStub.cpp  GdbStub.hpp  ITwibDeviceInterface.cpp  ITwibDeviceInterface.hpp  ITwibMetaInterface.cpp  ITwibMetaInterface.hpp  ITwibPipeReader.cpp  ITwibPipeReader.hpp  ITwibPipeWriter.cpp  ITwibPipeWriter.hpp  ITwibProcessMonitor.hpp  Messages.cpp  Messages.hpp  NamedPipeClient.cpp  NamedPipeClient.hpp  Packing.hpp  RemoteObject.cpp  RemoteObject.hpp  SocketClient.cpp  SocketClient.hpp  Twib.cpp  Twib.hpp  msgpack_show.cpp
twib/twib/interfaces/: ITwibDebugger.cpp  ITwibDebugger.hpp  ITwibDeviceInterface.cpp  ITwibDeviceInterface.hpp  ITwibMetaInterface.cpp  ITwibMetaInterface.hpp  ITwibPipeReader.cpp  ITwibPipeReader.hpp  ITwibPipeWriter.cpp  ITwibPipeWriter.hpp  ITwibProcessMonitor.cpp  ITwibProcessMonitor.hpp
twib/twibd/: .TCPFrontend.cpp.swp  BridgeObject.cpp  BridgeObject.hpp  CMakeLists.txt  Device.hpp  Frontend.hpp  LocalClient.cpp  LocalClient.hpp  Messages.cpp  Messages.hpp  NamedPipeFrontend.cpp  NamedPipeFrontend.hpp  SocketFrontend.cpp  SocketFrontend.hpp  TCPBackend.cpp  TCPBackend.hpp  TCPFrontend.cpp  TCPFrontend.hpp  Twibd.cpp  Twibd.hpp  UNIXFrontend.cpp  UNIXFrontend.hpp  USBBackend.cpp  USBBackend.hpp  USBKBackend.cpp  USBKBackend.hpp  err.hpp  msgpack_show.cpp  twibd.service  twibd.socket
twib2/: CMakeLists.txt  Logger.cpp  Logger.hpp  Protocol.hpp  config.hpp.in
twik/: Cargo.toml
twili/: AppletTracker.cpp  AppletTracker.hpp  ELFCrashReport.cpp  ELFCrashReport.hpp  Elf.hpp  FileManager.cpp  FileManager.hpp  MutexShim.cpp  MutexShim.hpp  Services.cpp  Services.hpp  Socket.cpp  Socket.hpp  SystemVersion.cpp  SystemVersion.hpp  Threading.cpp  Threading.hpp  TwibPipe.cpp  TwibPipe.hpp  Watchdog.cpp  Watchdog.hpp  hos_types.hpp  nifm.cpp  nifm.hpp  process_creation.cpp  process_creation.hpp  tipc.hpp  twili.cpp  twili.hpp  twili.json
twili_applet_shim/: NOTES  applet_common.cpp  applet_control.cpp  applet_control.json  applet_host.cpp  applet_host.json  twili_applet_shim.cpp  twili_applet_shim.json
twili_common/: applet_shim.hpp  err.hpp  process_creation.cpp  process_creation.hpp
(+139 files in other folders)
